prevent multiple-word proficiencies from wrapping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2678,6 +2678,7 @@ input, select, textarea {
 			color: rgba(255, 255, 255, 0.4);
 			border-bottom: none;
 			margin-left: 3px;
+			white-space: nowrap;
 		}
 
 /* Main */
